--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>The First Line of My Code</title>
-        <link rel="icon" href="pht/download.webp">
+        <link rel="icon" href="download.webp">
     </head>
     <body style="background-color: black;color: aliceblue;" >
         <center>
@@ -19,7 +19,7 @@
         </p>
 
         <center>
-            <img src="pht/OIP (1).webp" alt="picture" width="700" height="400">
+            <img src="OIP (1).webp" alt="picture" width="700" height="400">
         </center>
         <p>To get knowledge about HTML, <br>
            <a href="https://www.w3schools.com/html/">click here</a>.
